--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-   list-style: none;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -15,17 +16,22 @@ body {
 header {
     position: fixed;
     width: 80vw;
-    left: 50%; /*deixar centralizado os dois */
-    transform: translate(-50%); /*deixar centralizado*/
-    display: grid;/*Ativa o CSS Grid, que é um sistema de layout para criar estruturas com linhas e colunas */
+    left: 50%;
+    /*deixar centralizado os dois */
+    transform: translate(-50%);
+    /*deixar centralizado*/
+    display: grid;
+    /*Ativa o CSS Grid, que é um sistema de layout para criar estruturas com linhas e colunas */
     align-items: center;
     grid-template-columns: 1fr 600px;
-        /*
+    /*
         "1 fração do espaço disponível."
     Ou seja: ele usa todo o espaço que sobrar, depois que a coluna fixa (600px) for colocada.
         */
-        gap: 100px;
-        z-index: 2; /*Esse elemento fica sobre os que têm z-index 1 ou 0*/
+    gap: 100px;
+    z-index: 2;
+
+    /*Esse elemento fica sobre os que têm z-index 1 ou 0*/
     & img {
         width: 240px;
     }
@@ -39,9 +45,9 @@ header {
 }
 
 
-section { 
+section {
     background-image: radial-gradient(#4b1963, #6d00d9);
-    height: 100vh; 
+    height: 100vh;
     position: relative;
 
     & .list {
@@ -57,72 +63,215 @@ section {
             & .car-img {
                 position: absolute;
                 top: 50%;
-                transform: translateY(-50% );
+                transform: translateY(-50%);
                 width: 70%;
 
                 & img {
                     width: 100%;
-                    transform: rotate(-10deg); /*Girar a imagem*/
+                    transform: rotate(-10deg);
+                    /*Girar a imagem*/
                 }
             }
 
             & .content {
-               position: absolute;
-               right: 100px;
-               width: 70%;
-               height: 100%;
-               display: flex;
-               flex-direction: column;
-               justify-content: end;
-               align-items: end;
-               gap: 20px;
+                position: absolute;
+                right: 100px;
+                width: 70%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: end;
+                gap: 20px;
 
-               & .car-information {
-                font-weight: bold;
-               }
 
-               & h2 {
-                font-size: 6rem;
-                line-height: 1em;
-               }
+                & .car-information {
+                    font-weight: bold;
+                }
 
-               & .description {
-                color: rgb(212, 212, 212);
-                font-size: 12px;
-                text-align: right;
-                max-width: 400px;
-               }
+                & h2 {
+                    font-size: 6rem;
+                    line-height: 1em;
+                    font-family: "League Gothic", sans-serif;
+                }
 
-               & .information {
-                border-radius: 30px;
-                height:35px;
-                width: 120px;
-                text-transform: uppercase; /*tudo maiusculo*/
-                border: 2px solid rgb(73, 15, 107);
+                & .description {
+                    color: rgb(212, 212, 212);
+                    font-size: 12px;
+                    text-align: right;
+                    max-width: 400px;
+                }
+
+                & .information {
+                    border-radius: 30px;
+                    height: 35px;
+                    width: 120px;
+                    text-transform: uppercase;
+                    /*tudo maiusculo*/
+                    border: 2px solid rgb(73, 15, 107);
+                    background-color: #b5f711;
+                    color: black;
+                    cursor: pointer;
+                    /*“mãozinha”*/
+                    font-weight: bold;
+                    font-family: "League Gothic", sans-serif;
+                }
+            }
+        }
+
+        &::before {
+            /*antes do item */
+            content: '';
+            position: absolute;
+            height: 200px;
+            width: 100%;
+            top: 50%;
+            border-top: 1px solid rgb(173, 173, 173);
+        }
+    }
+
+
+    .arrows {
+        width: 70vw;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -25px);
+        display: flex;
+        justify-content: space-between;
+        /*espaço entre os elementos*/
+
+        & button:nth-child(1) {
+            & img {
+                transform: scale(-1);
+            }
+        }
+
+        & button {
+            top: 60%;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            border: none;
+            cursor: pointer;
+
+            & img {
+                width: 30px;
+                margin-top: 4px;
+                cursor: pointer;
+            }
+
+            &:hover {
                 background-color: #b5f711;
-                color: black;
-                cursor: pointer; /*“mãozinha”*/
-                font-weight: bold;
-               }
             }
         }
     }
 
-     .indicators {
+    .indicators {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%);
         height: 200px;
         width: 90vw;
-     }
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        gap: 15px;
 
-     .arrows {
-        & button {
-            & img {
-                width: 80px;
+        & .number {
+            font-size: 3rem;
+            font-family: "League Gothic", sans-serif;
+        }
+
+        & ul {
+            display: flex;
+            gap: 10px;
+
+            & li {
+                width: 50px;
+                height: 5px;
+                background-color: #b5f711;
+                border-radius: 5px;
+                transition: 0.5s;
+            }
+
+            & .active {
+                background-color: rgb(255, 255, 255);
             }
         }
-    } 
+
+    }
 }
-   
+
+section {
+
+    & .list {
+
+        & .item {
+            transform: translateX(100vw);
+            transition: 0.5s;
+            opacity: 0;
+
+            & .car-img {
+                & img {
+                    transform: rotate(0);
+                    transition: 0.5s;
+                    transition-delay: 0.3s;
+                }
+            }
+
+            & .content {
+
+                & .car-information,
+                h2,
+                .description,
+                .information {
+                    transform: translateX(200px);
+                    transition: 0.7s;
+                    transition-delay: 0.3s;
+                    opacity: 0;
+                }
+
+                & h2 {
+                    transition-delay: 0.5s;
+                }
+
+                & .description {
+                    transition-delay: 0.7s;
+                }
+
+                & .information {
+                    transition-delay: 0.9s;
+                }
+            }
+
+        }
+
+         & .active {
+            transform: translateX(0);
+            transition: 0.5s;
+            opacity: 1; 
+
+
+        & .car-img {
+            & img {
+                transform: rotate(-20deg);
+            }
+        }
+
+       
+
+            & .content {
+
+                & .car-information,
+                h2,
+                .description,
+                .information {
+                    transform: translateX(0);
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
