--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header {
         */
     gap: 100px;
     z-index: 2;
+    margin-top: 2rem;
 
     /*Esse elemento fica sobre os que têm z-index 1 ou 0*/
     & img {
@@ -40,6 +41,16 @@ header {
         & ul {
             display: grid;
             grid-template-columns: repeat(3, 200px);
+
+            & a {
+                  color: aliceblue;
+                  text-decoration: none;
+                  font-weight: 500;
+            }
+        }
+
+        & a:hover {
+            color: #b5fd00;
         }
     }
 }
@@ -71,6 +82,18 @@ section {
                     transform: rotate(-10deg);
                     /*Girar a imagem*/
                 }
+
+                &::before {
+                   content: '';
+                   position: absolute;
+                   background-color: rgba(0, 0, 0, 0.76);
+                   width: 100%;
+                   height: 100px;
+                   top: 150%;
+                   left: 50px;
+                   border: 50%;
+                   filter: blur(50px); /*efeito esfumado*/
+                }
             }
 
             & .content {
@@ -87,19 +110,23 @@ section {
 
                 & .car-information {
                     font-weight: bold;
+                    color: #b5f711;
+                    margin-bottom: 01rem;
                 }
 
                 & h2 {
-                    font-size: 6rem;
+                    font-size: 5rem;
                     line-height: 1em;
                     font-family: "League Gothic", sans-serif;
                 }
 
                 & .description {
-                    color: rgb(212, 212, 212);
-                    font-size: 12px;
+                    color: rgb(230, 228, 228);
+                    font-size: 11px;
+                    font-weight: 500;
                     text-align: right;
                     max-width: 400px;
+                    margin-top: 3rem;
                 }
 
                 & .information {
@@ -110,11 +137,10 @@ section {
                     /*tudo maiusculo*/
                     border: 2px solid rgb(73, 15, 107);
                     background-color: #b5f711;
-                    color: black;
+                    color: rgba(0, 0, 0, 0.911);
                     cursor: pointer;
                     /*“mãozinha”*/
                     font-weight: bold;
-                    font-family: "League Gothic", sans-serif;
                 }
             }
         }
@@ -126,7 +152,7 @@ section {
             height: 200px;
             width: 100%;
             top: 50%;
-            border-top: 1px solid rgb(173, 173, 173);
+            border-top: 1px solid rgba(128, 128, 128, 0.459);
         }
     }
 
@@ -207,9 +233,11 @@ section {
 section {
 
     & .list {
+        --calulatiom: 1;
+
 
         & .item {
-            transform: translateX(100vw);
+            transform: translateX(calc(100vw * var(--calulatiom)));
             transition: 0.5s;
             opacity: 0;
 
@@ -227,7 +255,7 @@ section {
                 h2,
                 .description,
                 .information {
-                    transform: translateX(200px);
+                    transform: translateX(calc(200px * var(--calulatiom)));
                     transition: 0.7s;
                     transition-delay: 0.3s;
                     opacity: 0;
