--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-color: black;
     color: white;
     font-size: 16px;
-    overflow: hidden;
+   
 }
 
 header {
@@ -43,14 +43,20 @@ header {
             grid-template-columns: repeat(3, 200px);
 
             & a {
-                  color: aliceblue;
-                  text-decoration: none;
-                  font-weight: 500;
+                display: inline-block;
+                color: aliceblue;
+                text-decoration: none;
+                font-weight: 500;
+                transition: transform 0.2s ease;
+
             }
         }
 
         & a:hover {
             color: #b5fd00;
+            transform: scale(1.1);
+
+
         }
     }
 }
@@ -84,15 +90,16 @@ section {
                 }
 
                 &::before {
-                   content: '';
-                   position: absolute;
-                   background-color: rgba(0, 0, 0, 0.76);
-                   width: 100%;
-                   height: 100px;
-                   top: 150%;
-                   left: 50px;
-                   border: 50%;
-                   filter: blur(50px); /*efeito esfumado*/
+                    content: '';
+                    position: absolute;
+                    background-color: rgba(0, 0, 0, 0.76);
+                    width: 100%;
+                    height: 100px;
+                    top: 150%;
+                    left: 50px;
+                    border: 50%;
+                    filter: blur(50px);
+                    /*efeito esfumado*/
                 }
             }
 
@@ -141,6 +148,7 @@ section {
                     cursor: pointer;
                     /*“mãozinha”*/
                     font-weight: bold;
+                    transition: transform 0.2s ease;
                 }
             }
         }
@@ -276,19 +284,19 @@ section {
 
         }
 
-         & .active {
+        & .active {
             transform: translateX(0);
             transition: 0.5s;
-            opacity: 1; 
+            opacity: 1;
 
 
-        & .car-img {
-            & img {
-                transform: rotate(-20deg);
+            & .car-img {
+                & img {
+                    transform: rotate(-20deg);
+                }
             }
-        }
 
-       
+
 
             & .content {
 
@@ -303,3 +311,4 @@ section {
         }
     }
 }
+
